[FIX] account: hide search panel expand/fold button in chart of accounts
This commit hides the expand/fold button of the search panel in the chart
of accounts because it overlaps with the search panel buttons and is not
useful in this case.

--- a/addons/account/static/src/scss/account_searchpanel.scss
+++ b/addons/account/static/src/scss/account_searchpanel.scss
@@ -1,6 +1,10 @@
 .o_search_panel.account_root {
     padding: 6px !important; // need to override bootstrap ps-4 rule
     scrollbar-width: thin;
+    > button:first-child {
+        // hide the expand/fold button
+        display: none;
+    }
     .o_search_panel_section_header {
         display: none;
     }
